--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
           fontFamily: {
             sans: ['Plus Jakarta Sans', 'sans-serif'],
           },
+          animation: {
+            'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            'float': 'float 6s ease-in-out infinite',
+          },
+          keyframes: {
+            float: {
+              '0%, 100%': { transform: 'translateY(0)' },
+              '50%': { transform: 'translateY(-10px)' },
+            }
+          }
         },
       },
     }
@@ -34,22 +44,38 @@
     .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     
     @keyframes in {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(20px) scale(0.95); }
+      to { opacity: 1; transform: translateY(0) scale(1); }
     }
-    .animate-in {
-      animation: in 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    .animate-in-smart {
+      animation: in 0.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
     }
 
     .dark .custom-scrollbar::-webkit-scrollbar-thumb { background: #334155; }
     
-    /* Support for safe areas on mobile devices */
-    .pb-safe {
-      padding-bottom: env(safe-area-inset-bottom);
+    .glass {
+      background: rgba(255, 255, 255, 0.92);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
     }
-    .mb-safe {
-      margin-bottom: env(safe-area-inset-bottom);
+    .dark .glass {
+      background: rgba(15, 23, 42, 0.95);
     }
+
+    .mesh-gradient {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      filter: blur(100px);
+      opacity: 0.5;
+      pointer-events: none;
+    }
+
+    /* Support for safe areas */
+    .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
   </style>
 <script type="importmap">
 {
@@ -64,7 +90,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900 selection:bg-indigo-100 selection:text-indigo-900 transition-colors duration-300">
+<body class="bg-slate-50 text-slate-900 selection:bg-indigo-100 selection:text-indigo-900 transition-colors duration-500 overflow-x-hidden">
   <div id="root"></div>
 </body>
 </html>
